# TestLib

./: .gitmodules  LICENSE  local.properties
app/: build.gradle
app/src/androidTest/java/com/akc/ada/testlib/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/akc/ada/testlib/: MainActivity.kt
app/src/test/java/com/akc/ada/testlib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
